# ParaCompiler

./: .clang-format  .gitignore  CMakeLists.txt  Readme.md  a.txt  build.sh  main  main.cpp  prog.pcl  run.sh  setup_dev_env.sh
.github/workflows/: cmake-multi-platform.yml
ast/: assignment_nodes.hpp  base_operator_nodes.hpp  binary_arithmetic_nodes.hpp  comparsion_nodes.hpp  keyword_nodes.hpp  logical_nodes.hpp  scope_node.hpp
bebra/: test.pcl
frontend/: CMakeLists.txt  driver.cpp  driver.hpp  frontend.hpp  lexer.flex  lexer.hpp  main.cpp  nametable.hpp  nametable_record.hpp  parser.yy
frontend/include/: ast.hpp  driver.hpp
frontend/include/lexer/: scanner.hh
frontend/include/parser/: parser.hh  parser.yy
frontend/include/tokens/: abstract_token.hpp  keyword_tokens.hpp  operator_tokens.hpp  specific_lexer_tokens.hpp  tokens.hpp  visitor.hpp
frontend/include/tokens/operators/: arithmetic_tokens.hpp  assignment_tokens.hpp  base_operator_tokens.hpp  binary_arithmetic_tokens.hpp  comparsion_tokens.hpp
frontend/lexer/: lexer.flex
frontend/parser/: parser.yy
frontend/source/: driver.cc  driver.cpp
graphviz/: CMakeLists.txt  dot_common.cpp  graphviz.cpp  graphviz.hpp  main.cpp
graphvizer/: CMakeLists.txt  main.cpp
graphvizer/include/: dot_common.hpp  dot_graph.hpp  dot_io.hpp
graphvizer/source/: dot_common.cpp  dot_io.cpp
include/: abstract_node.hpp  ast.hpp  base_operator_tokens.hpp  comparsion_tokens.hpp  operand_nodes.hpp  serialization.hpp  tokens.hpp  translation_unit_node.hpp  unary_arithmetic_nodes.hpp  unary_arithmetic_tokens.hpp  visitor.hpp
include/tokens/: abstract_token.hpp  bracket_tokens.hpp  keyword_tokens.hpp  operand_tokens.hpp  operator_tokens.hpp  tokens.hpp  visitor.hpp
lexer/: .gitignore  CMakeLists.txt  calc++  calc++.cc  driver.cc  driver.hh  lex.yy.c  lex.yy.cc  lexer.c  lexer.l  parser.c  parser.h  parser.hh  parser.tab.cc  parser.tab.hh  parser.y  parser.yy  prog  scanner.hh  scanner.l  scanner.yy.c  scanner.yy.cc
lexer/inc/: ast_node.h  ast_node.hpp  symtab.h
lexer/notes/: backlog
lexer/src/: ast_node.c  ast_node.cpp
protobuf/: CMakeLists.txt  ast.proto  nodes.proto  serialization.cpp  serialization.hpp  tokens.proto
simulator/: CMakeLists.txt  main.cpp  simulator.cpp  simulator.hpp
tests/: a.out  test.sh  test_for_parser.sh
tests/erroneous_tests_for_lexer/: test.sh  test_1.pcl  test_2.pcl  test_3.pcl  test_4.pcl  test_5.pcl  test_6.pcl  test_7.pcl  test_8.pcl
tests/erroneous_tests_for_parser/: test.sh  test_01.pcl  test_02.pcl  test_03.pcl  test_04.pcl  test_05.pcl  test_07.pcl  test_08.pcl  test_09.pcl  test_10.pcl  test_11.pcl  test_12.pcl  test_13.pcl  test_14.pcl  test_15.pcl  test_16.pcl  test_17.pcl  test_18.pcl  test_19.pcl  test_20.pcl  test_22.pcl  test_23.pcl  test_24.pcl  test_25.pcl  test_26.pcl  test_27.pcl  test_28.pcl  test_29.pcl  test_30.pcl  test_31.pcl  test_32.pcl  test_33.pcl  test_34.pcl  test_36.pcl  test_6.pcl
tests/simple_tests/: test.sh
tests/simple_tests/test_01/: test.pcl
tests/simple_tests/test_02/: stdin_02.txt  stdin_03.txt  test.pcl
tests/simple_tests/test_03/: expected_stdout_01.txt  test.pcl
tests/simple_tests/test_04/: expected_stdout_01.txt  expected_stdout_02.txt  stdin_02.txt  test.pcl
tests/simple_tests/test_05/: expected_stdout_01.txt  expected_stdout_02.txt  test.pcl
tests/simple_tests/test_06/: expected_stdout_01.txt  expected_stdout_03.txt  stdin_03.txt  test.pcl
tests/simple_tests/test_07/: expected_stdout_02.txt  stdin_02.txt  test.pcl
tests/simple_tests/test_08/: test.pcl
tests/simple_tests/test_09/: expected_stdout_02.txt  test.pcl
tests/simple_tests/test_10/: expected_stdout_01.txt  expected_stdout_02.txt  stdin_01.txt  stdin_02.txt  stdin_03.txt  test.pcl
tests/simple_tests/test_11/: expected_stdout_03.txt  test.pcl
tests/simple_tests/test_12/: test.pcl
tests/simple_tests/test_14/: test.pcl
tests/simple_tests/test_15/: test.pcl
tests/simple_tests/test_16/: expected_stdout_01.txt  test.pcl
tests/simple_tests/test_17/: test.pcl
